--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Gideon Sainyeye",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.6.5",
     "cheerio": "^1.0.0-rc.12"
